# EroEroBot

./: .flask8  README.md  deploy.md  main-base.py  main-saya.py  main.py  pyproject.toml  requirements.txt
modules/: 11_ero.py  12_ero.py  12_waiter.py  13_file.py  file_operation.py  formatter.py  forward_message.py  image_from_internet.py  interrupt_control.py  multimedia_message.py  nudge_event.py  other_event.py  recall_message.py  scheduler.py
