[project]
authors = [
    {name = "Graiax-Community", email = "example@graiax.cn"},
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "graia-ariadne[standard]~=0.10",
    "graiax-silkcoder[ffmpeg]~=0.3",
    "aiohttp[speedups]~=3.8",
]
name = "EroEroBot"
version = "0.1.0"
description = "GraiaX 社区文档示例 —— 大家最喜欢的涩图机器人"
readme = "README.md"

[project.urls]
homepage = "https://graiax.cn"
repository = "https://github.com/Graiax-Community/EroEroBot"
documentation = "https://graiax.cn"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black~=23.1",
    "isort[requirements_deprecated_finder]~=5.12",
    "flake8~=6.0",
]

[tool.pdm.build]
includes = [
    "data/",
    "modules/",
    "main-*.py",
]

[[tool.pdm.source]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/"
verify_ssl = true

[tool.black]
line-length = 120
target-version = ["py39", "py310"]
safe = true

[tool.isort]
profile = "black"
