[project]
authors = [
    {name = "Graia Community", email = "admin@graiax.cn"},
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "graia-ariadne[standard]>=0.11.7",
    "graiax-silkcoder[ffmpeg]>=0.3.6",
    "aiohttp[speedups]>=3.8.5",
]
name = "EroEroBot"
version = "0.1.0"
description = "GraiaX 社区文档示例 —— 大家最喜欢的涩图机器人"
readme = "README.md"

[project.urls]
homepage = "https://graiax.cn"
repository = "https://github.com/Graiax-Community/EroEroBot"
documentation = "https://graiax.cn"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort[requirements_deprecated_finder]>=5.12.0",
    "flake8>=6.1.0",
]

[tool.pdm.build]
includes = [
    "data/",
    "modules/",
    "main-*.py",
]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]
safe = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    # https://beta.ruff.rs/docs/rules
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "I",  # isort
    # "D",  # pydocstyle
    "ASYNC", # flake8-async
]
exclude = [".git", ".venv", "__pypackages__", "dist"]
ignore = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"
